--- a/src/css/App.css
+++ b/src/css/App.css
@@ -80,8 +80,9 @@
   html,
   body,
   #root {
-    height:100%; 
-    width:100%; 
+    overflow: hidden;
+    height:101%; 
+    width:101%; 
     margin: 0px; 
     padding: 0px; 
   }
