--- a/src/css/App.css
+++ b/src/css/App.css
@@ -80,12 +80,19 @@
   html,
   body,
   #root {
-    overflow: hidden;
+    overflow: visible;
     height:100%; 
     width:100%; 
     margin: 0px; 
     padding: 0px; 
   }
-  
-
+  .item {
+    width: 300px;
+    height: 300px;
+    margin: 0px; 
+    padding: 0px; 
+  }
+  ::-webkit-scrollbar{
+    display: none;
+  }
   
