--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,13 @@
-
-  .Grid {
-    border: 1px solid #800ecc;
-    background-color: rgb(17, 97, 189); 
-    margin: 0px; 
-    padding: 0px; 
-  }
-  .Grid.active {
-    cursor: grabbing;
-    cursor: -webkit-grabbing;
-    transform: scale(1);
-  }
+.Grid {
+  border: 1px solid #800ecc;
+  background-color: rgb(17, 97, 189);
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+}
+.Grid.active {
+  cursor: grabbing;
+  cursor: -webkit-grabbing;
+  transform: scale(1);
+}
