--- a/PinPlane-Persist/src/css/App.css
+++ b/PinPlane-Persist/src/css/App.css
@@ -89,6 +89,10 @@ body,
   margin: 0px;
   padding: 0px;
 }
+::-webkit-scrollbar{
+  display: none;
+} 
+
 .item {
   width: 300px;
   height: 300px;
